--- a/Desktop/LP/LP.html
+++ b/Desktop/LP/LP.html
@@ -157,7 +157,7 @@
 </div>
 
 
-<!--ライブキッチンの特徴-->
+<!--登録-->
 <div class="row" id="resist">
 	<div  class="col-xs-6" id="resistL" align="right">
 	<img src="img/phoneImg5.png">>
@@ -181,8 +181,38 @@
 		<div id="button2">
 			<img src="img/login.png">
 		</div>
-	
 	</div>
+</div>
+
+<!--フッター-->
+<div id="footer" align="center">
+	<p id="title">
+	ライブキッチンについて
+	</p>
+
+	<p id="link"><a style="color:white">
+	利用規約
+	</a></p>
+	<p id="link"><a style="color:white">
+	プライバシーポリシー
+	</a></p>
+	<p id="link"><a style="color:white">
+	会社概要(運営会社)
+	</a></p>		
+	<p id="link"><a style="color:white">
+	特定取引に関する表記
+	</a></p>
+	<p id="link"><a style="color:white">
+	法令順守と犯罪防止のために
+	</a></p>
+	<p id="link"><a style="color:white">
+	採用情報
+	</a></p>
+
+	<p id="title">
+	©LIVE KITCHEN ALL RIGHT RESERVED
+	</p>
+
 
 </div>
 </body>
