STEP2のcssがなぜかきかない

--- a/Desktop/LP/LP.html
+++ b/Desktop/LP/LP.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
 	<title>LIVE KITCHEN</title>
-	<link rel="stylesheet" type="text/css" href="LP.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/LP.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<meta charset="UTF-8">
 </head>
 <body>
 
@@ -16,14 +17,14 @@
 	<p>
 	</div>
 
-	<div id="content" align="center">
+	<div id="content" align="center"　class="vw">
 		スマホひとつあれば<br>
 		誰でも気軽に料理を教えたり<br>
 		教わったりできます<br>
 	</div>
  
 	<div id="phoneImg" align="center">
-		<img src="img/phoneImg1.png">
+		<img class="img-responsive" alt="Responsive image" src="img/phoneImg1.png" class="img-responsive" alt="Responsive image">
 	</div>
 </div>
 
@@ -31,9 +32,9 @@
 <div  id="step" align="center">
 	
 	<div id="stepImg" align="center">
-		<img src="img/Step1.png">
+		<img class="img-responsive" alt="Responsive image" src="img/Step1.png">
 	</div>
-
+	
 	<div id="title" align="center">
 	<p>
 	自慢の料理をアップ
@@ -46,14 +47,15 @@
 	</div>
  
 	<div id="phoneImg" align="center">
-		<img src="img/phoneImg2.png">
+		<img class="img-responsive" alt="Responsive image" src="img/phoneImg2.png">
 	</div>
+</div>
 
 <!--step2-->
 <div  id="step2" align="center">
 	
 	<div id="stepImg" align="center">
-		<img src="img/Step2.png">
+		<img class="img-responsive" alt="Responsive image" src="img/Step2.png">
 	</div>
 
 	<div id="title" align="center">
@@ -64,11 +66,11 @@
 
 	<div id="content" align="center">
 		あなたがレッスンできる日を<br>
-		選んで無料出品しよう<br>
+		選んで無料出品しよう
 	</div>
  
 	<div id="phoneImg" align="center">
-		<img src="img/phoneImg3.png">
+		<img class="img-responsive" alt="Responsive image" src="img/phoneImg3.png">
 	</div>
 </div>
 
@@ -77,7 +79,7 @@
 <div  id="step3" align="center">
 	
 	<div id="stepImg" align="center">
-		<img src="img/Step3.png">
+		<img class="img-responsive" alt="Responsive image" src="img/Step3.png">
 	</div>
 
 	<div id="title" align="center">
@@ -93,7 +95,7 @@
 	</div>
  
 	<div id="phoneImg" align="center">
-		<img src="img/phoneImg4.png">
+		<img class="img-responsive" alt="Responsive image" src="img/phoneImg4.png">
 	</div>
 </div>
 
@@ -109,7 +111,7 @@
 	
 
 	<div id="point" align="center">
-		<img src="img/specific1.png">
+		<img class="img-responsive" alt="Responsive image" src="img/specific1.png">
 	</div>
 	<div id="miniTitle" align="center">
 	<p>
@@ -124,7 +126,7 @@
  
 
 	<div id="point" align="center">
-		<img src="img/specific2.png">
+		<img class="img-responsive" alt="Responsive image" src="img/specific2.png">
 	</div>
 	<div id="miniTitle" align="center">
 	<p>
@@ -141,7 +143,7 @@
 
 
 	<div id="point" align="center">
-		<img src="img/specific3.png">
+		<img class="img-responsive" alt="Responsive image" src="img/specific3.png">
 	</div>
 
 	<div id="miniTitle" align="center">
@@ -160,26 +162,24 @@
 <!--登録-->
 <div class="row" id="resist">
 	<div  class="col-xs-6" id="resistL" align="right">
-	<img src="img/phoneImg5.png">>
+		<img class="img-responsive" alt="Responsive image" src="img/phoneImg5.png">
 	</div>
 	<div  class="col-xs-6" id="resistR" align="left">
 		<div id="logo">
-			<img src="img/LIVE KITCHEN.png">
+			<img class="img-responsive" alt="Responsive image" src="img/LIVE KITCHEN.png">
 		</div>
 		<p id="title">
-		スマホひとつで<br>
-		誰でも料理教室
+			スマホひとつで<br>
+			誰でも料理教室
 		</p>
 		<p id="content">
-		今すぐ無料登録！
+			今すぐ無料登録！
 		</p>
-		
 		<div id="button">
-			<img src="img/signUp.png">
+			<img class="img-responsive" alt="Responsive image" src="img/signUp.png">
 		</div>
-		
 		<div id="button2">
-			<img src="img/login.png">
+			<img class="img-responsive" alt="Responsive image" src="img/login.png">
 		</div>
 	</div>
 </div>
@@ -209,11 +209,11 @@
 	採用情報
 	</a></p>
 
-	<p id="title">
+	<div id="title">
 	©LIVE KITCHEN ALL RIGHT RESERVED
-	</p>
-
-
+	</div>
 </div>
+
+
 </body>
 </html>
